--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: 2020_frontpage
-title: Speaker. Entrepreneur. Advisor.
+title: Consultor. Bartender Élite IBA. Embajador ILC.
 description: {{ site.description }}
 ---
